@@ -1,5 +1,6 @@
-th {
+th, td {
 	text-align: left;
+	padding: 0 .2em;
 }
 
 tr.pending {
